src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Competitor_Freetext__c</fullName>
        <label>Competitor Freetext</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product_Value__c</fullName>
        <label>Competitor Product Value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <label>Competitor Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>AdWords supplier + freetext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dagspressen/Ibladning + freetext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-boxlösningar + freetext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other + freetext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tredjeman + freetext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utländska Postföretag + freetext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 gram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D Logistik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3X34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A til B Budservice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aditro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Cargo Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beweship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bladkompagniet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blå Kurer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bussgods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dachser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deletion_Flag__c</fullName>
        <formula>Opportunity.Deletion_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Stage__c</fullName>
        <description>Populated by code. This field stores the stage the opportunity was at when the product gets set to status Won/Lost. The end stage will not be Closed Won or Closed Lost. Used by BW for pipeline reporting.</description>
        <label>End Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exist_Volume_Unit__c</fullName>
        <label>Exist Volume Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Units</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tonne</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Price_Per_Unit__c</fullName>
        <formula>IF (Existing_Value__c &gt; 0, Existing_Value__c /  Existing_Volume__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Price Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Existing Value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Existing Volume</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Country_Continent__c</fullName>
        <label>From Country Continent</label>
        <picklist>
            <controllingField>From_Country__c</controllingField>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Country__c</fullName>
        <label>From Country</label>
        <picklist>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RoW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herceg.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Amount__c</fullName>
        <description>Populated by workflow with the first Opportunity Value amount on the line item that is &gt; 0. Used by BW for pipeline reporting</description>
        <label>Initial Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_4000_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is 4000 Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Money_Value__c</fullName>
        <formula>IF ( Value_Change__c &gt; 0,  Value_Change__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Money Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Volume_Unit__c</fullName>
        <label>Opp Volume Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Units</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tonne</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Header_ID__c</fullName>
        <description>Used for BI. Not used in SFDC</description>
        <formula>Opportunity.Opportunity_ID__c</formula>
        <label>Opportunity Header ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Price_Per_Unit__c</fullName>
        <formula>IF ( Opportunity_Volume__c &gt; 0, Opportunity_Value__c /  Opportunity_Volume__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Price Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_ID__c</fullName>
        <description>Not to be displayed on page layout. Field created for BW</description>
        <displayFormat>OP-{0000000}</displayFormat>
        <label>Opportunity Product ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <label>Opportunity Value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Volume__c</fullName>
        <label>Opportunity Volume</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Increase__c</fullName>
        <formula>Opportunity_Price_Per_Unit__c -  Existing_Price_Per_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Private_Opportunity__c</fullName>
        <formula>Opportunity.Private_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Private Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>To be used in Product Whitespacing code</description>
        <label>Product Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <formula>PricebookEntry.Product2.Product_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>PricebookEntry.Product2.Product_Article_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_hame_hidden__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product_hame_hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <label>Reason Lost</label>
        <picklist>
            <controllingField>Product_Status__c</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No customer need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No customer interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in customer conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal lead time in Business area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing volume moved to another cust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost whole customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost product on customer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_Won__c</fullName>
        <label>Reason Won</label>
        <picklist>
            <controllingField>Product_Status__c</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract renewal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Renegotiation_Value__c</fullName>
        <formula>IF ( Value_Change__c &lt; 0, Opportunity_Value__c  ,  Existing_Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renegotiation Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salesforce_Product_ID__c</fullName>
        <formula>CASESAFEID(PricebookEntry.Product2Id)</formula>
        <label>Salesforce Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Stage__c</fullName>
        <description>Populated by workflow. Stores the stage the opportunity was in when the opportunity product was added to the opportunity. Used by BW for pipeline reporting.</description>
        <label>Start Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Country_Continent__c</fullName>
        <label>To Country Continent</label>
        <picklist>
            <controllingField>To_Country__c</controllingField>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Country__c</fullName>
        <label>To Country</label>
        <picklist>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RoW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herceg.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renegotiation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Change__c</fullName>
        <formula>IF (ISPICKVAL( Product_Status__c , &quot;Lost&quot;), IF(Existing_Value__c &gt; 0, 0 - Existing_Value__c, 0), Opportunity_Value__c -  Existing_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Add_Competitor_if_Lost_Reason_Competitor</fullName>
        <active>false</active>
        <description>If product is lost and reason lost is competitor then enforce competitor dropdown choice</description>
        <errorConditionFormula>AND(INCLUDES( Opportunity.Reason_Lost__c , &apos;Competitor&apos;), ISPICKVAL ( Competitor__c, &apos;&apos; )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Please choose a competitor for each product when reason lost is competitor</errorMessage>
    </validationRules>
</CustomObject>